# weather-assistant

./: Cargo.toml  Modelfile  README.md  compose.yaml
.github/workflows/: release.yml
src/: main.rs  tools.rs
src/tools/: get_weather.rs  mod.rs
