[package]
name = "weather-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.3", features = ["macros", "stream"] }
reqwest = { version = "0.12.25" }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
