[package]
name = "weather-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
ollama-rs = { version = "0.3.3" }
reqwest = { version = "0.12.25" }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
